--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@
   margin: 0 auto;
 }
 
+.body {
+  background-color: rgba(246, 196, 228, 0.7);
+}
+
 .navbar {
   display: flex;
   align-items: center;
-  background-color: rgba(35, 49, 62, 0.9);
+  background-color: rgba(35, 49, 62, 0.1);
   height: 80px;
   border-radius: 0px 0px 10px 10px;
+  z-index: 1;
 }
 .logo {
   width: 60px;
@@ -64,7 +69,88 @@
   background-color: rgb(236, 236, 236);
 }
 
-.dd {
+#admin-panel {
+  margin-top: 80px;
+  background-color: rgba(35, 49, 62, 0.1);
+  width: 800px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+#add-form h2 {
+  color: rgb(35, 49, 62);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+}
+#add-form input {
+  display: flex;
+  text-align: center;
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+}
+
+#btn {
+  background-color: rgb(72, 156, 171);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+  color: white;
+  width: 250px;
+}
+
+.tree {
+  z-index: 1;
+}
+
+.tree-one {
+  display: flex;
+  justify-content: flex-start;
+  position: absolute;
+  top: -30px;
+  z-index: 0;
+}
+
+.tree-two {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  top: -30px;
+  left: 74%;
+  z-index: 0;
+}
+
+footer {
+  background-color: rgba(0, 0, 0, 0.9);
+  height: 100px;
+  position: relative;
+  bottom: 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
+  opacity: 0.5;
+}
+
+.footer img {
+  width: 20px;
+  height: 20px;
+}
+
+.footer h1 {
+  color: white;
+  font-family: "Roboto" sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.paragraph {
+  font-size: 18px;
+  color: white;
+  padding-left: 20px;
+}
+
+.father {
   display: flex;
   justify-content: space-evenly;
 }
@@ -72,26 +158,27 @@
 .btn-delete {
   display: block;
   width: 100px;
-  padding: 0.4rem;
-  font-size: 1rem;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 500;
   text-align: center;
   color: white;
-  background-color: red;
+  background-color: rgb(72, 156, 171);
   border: none;
   border-radius: 0.5rem;
-  transition: 0.2s;
   cursor: pointer;
-  letter-spacing: 0.1rem;
 }
+
 .btn-delete:hover {
-  cursor: pointer;
   color: black;
+  transition: 0.5s;
 }
+
 .btn-edit {
   display: block;
   width: 100px;
-  padding: 0.4rem;
-  font-size: 1rem;
+  padding: 0.5rem;
+  font-size: 1.2rem;
   text-align: center;
   color: white;
   background-color: rgba(35, 49, 62, 0.9);
@@ -103,36 +190,87 @@
 }
 
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  margin: 0 auto;
+  background-color: rgba(35, 49, 62, 0.1);
+  width: 500px;
+  height: 450px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+#edit-form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+#eidt-form h2 {
+  color: rgb(35, 49, 62);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+}
+#edit-inp {
+  display: flex;
+  text-align: center;
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+  width: 400px;
+  height: 40px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  transition: 0.5s;
+}
+#edit-inp:focus {
+  transition: 0.2s;
+  width: 410px;
+  height: 45px;
+  border-radius: 5px;
 }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+#save-btn {
+  background-color: rgb(88, 122, 154);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+  color: white;
+  width: 80px;
+  height: 40px;
+  border-radius: 10px 0px 0px 10px;
+  border: none;
+  transition: 1s;
+}
+#save-btn:hover {
+  background-color: rgb(35, 49, 62);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+  color: white;
+  width: 80px;
+  height: 40px;
+  border-radius: 10px 0px 0px 10px;
+  border: none;
+  transition: 1s;
+}
+#close-btn {
+  background-color: rgb(88, 122, 154);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+  color: white;
+  width: 80px;
+  height: 40px;
+  border-radius: 0px 10px 10px 0px;
+  border: none;
+  transition: 1s;
+}
+
+#close-btn:hover {
+  background-color: rgb(35, 49, 62);
+  font-weight: 600;
+  font-family: "Roboto" sans-serif;
+  color: white;
+  width: 80px;
+  height: 40px;
+  border-radius: 0px 10px 10px 0px;
+  border: none;
+  transition: 1s;
 }
